fixed a visual squish bug

--- a/src/app/etl/templates/components/TemplateEditor.less
+++ b/src/app/etl/templates/components/TemplateEditor.less
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     flex: 0 1 @total-column-basis;
+    overflow-x: hidden;
   }
 
   .template-editor-columns-area {
@@ -31,6 +32,7 @@
 
       &.main-document-column {
         flex: 0 1 @main-column-basis;
+        overflow-x: hidden;
       }
 
       &.main-document-column-hidden {
